@@ -1,3 +1,11 @@
+Fri May 21 01:06:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* thread.c (subtract_tv): if the rest is zero, should finish waiting
+	  immediately.
+
+	* win32/win32.c (subtract): ditto.
+	  based on a patch from Roger Pack in [ruby-core:27957].
+
 Thu May 20 22:49:04 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* re.c (rb_reg_s_union_m): update rdoc.  [ruby-dev:41354]
